feat: updated plague predictor's algorithm for better behavior in gdd accumulative
